--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,7 +3,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>Tai搭建的个人博客</title>
+  <title>Jekyll和Github搭建个人静态博客</title>
   <meta name="description" content="Pwnny的个人博客。有关于web前端的一切，运用html构建一个强壮的骨架，用css披上一层华美的服饰，用javascript完成一套行云流水的动作">
   <meta name="keywords" content="pwnny,pwnny's blog,javascript,css,前端,jekyll,搭建博客,github博客">
   <meta name="renderer" content="webkit">
